--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="conteiner header__conteiner">
         <nav class="header__navigation">
           <a class="logo" href="./index.html" lang="en"
@@ -53,14 +53,14 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main class="main">
       <!-- Секция герой -->
-      <section class="hero">
+      <!-- <section class="hero">
         <h1 class="hero__title">Эффективные решения<br />для вашего бизнеса</h1>
-        <button class="button" type="button" data-modal-open>Заказать услугу</button>
+        <button class="button" type="button" data-modal-open>Заказать услугу</button> -->
         <!-- Модальное окно -->
-        <div class="backdrop is-hidden" data-modal>
+        <!-- <div class="backdrop is-hidden" data-modal>
           <div class="modal-wrapper">
             <button class="btn-close" data-modal-close aria-label="Закрыть">
               <svg class="btn-close__icon" width="11" height="11">
@@ -115,7 +115,7 @@
             </form>
           </div>
         </div>
-      </section>
+      </section> -->
       <!--Наши преимущества  -->
       <section class="section">
         <div class="conteiner">
@@ -169,7 +169,7 @@
         </div>
       </section>
       <!-- Чем мы занимаемся -->
-      <section class="section main__section">
+      <!-- <section class="section main__section">
         <div class="conteiner">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="specialty">
@@ -205,9 +205,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Наша команда -->
-      <section class="section section--background ">
+      <!-- <section class="section section--background ">
         <div class="conteiner">
           <h2 class="section__title">Наша команда</h2>
           <ul class="team">
@@ -482,9 +482,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Постоянные клиенты -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="conteiner">
           <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="client">
@@ -568,12 +568,12 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- Footer -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="conteiner footer__conteiner">
         <div class="logo-address">
           <a class="footer-logo" href="./index.html" lang="en"
@@ -668,7 +668,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
