--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
       </section>
       <!-- Чем мы занимаемся -->
-      <!-- <section class="section main__section">
+       <section class="section main__section">
         <div class="conteiner">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="specialty">
@@ -205,9 +205,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section> 
       <!-- Наша команда -->
-      <!-- <section class="section section--background ">
+      <section class="section section--background ">
         <div class="conteiner">
           <h2 class="section__title">Наша команда</h2>
           <ul class="team">
@@ -482,7 +482,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Постоянные клиенты -->
       <!-- <section class="section">
         <div class="conteiner">
