--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
         </div>
       </section>
       <!-- Постоянные клиенты -->
-      <!-- <section class="section">
+      <section class="section">
         <div class="conteiner">
           <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="client">
@@ -568,85 +568,87 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- Footer -->
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="conteiner footer__conteiner">
-        <div class="logo-address">
-          <a class="footer-logo" href="./index.html" lang="en"
-            >Web<span class="footer-logo__part footer-logo__part--accent" lang="en">Studio</span></a
-          >
-          <address class="address">
-            <p class="address__residential">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="address__list">
-              <li class="address__item">
-                <a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <div class= "wrapper-address-socials" >
+          <div class="logo-address">
+            <a class="footer-logo" href="./index.html" lang="en"
+              >Web<span class="footer-logo__part footer-logo__part--accent" lang="en">Studio</span></a
+            >
+            <address class="address">
+              <p class="address__residential">г. Киев, пр-т Леси Украинки, 26</p>
+              <ul class="address__list">
+                <li class="address__item">
+                  <a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="address__item">
+                  <a class="address__link" href="tel:+380961111111">+380961111111</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer-socials">
+            <strong class="footer-socials__title">Присоединяйтесь</strong>
+            <ul class="socials">
+              <li class="socials__item">
+                <a
+                  class="socials__link--darck"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="иконка instagram"
+                >
+                  <svg class="socials__icon--darck" width="20" height="20">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address__item">
-                <a class="address__link" href="tel:+380961111111">+380961111111</a>
+              <li class="socials__item">
+                <a
+                  class="socials__link--darck"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="иконка twitter"
+                >
+                  <svg class="socials__icon--darck" width="20" height="20">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__link--darck"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="иконка facebook"
+                >
+                  <svg class="socials__icon--darck" width="20" height="20">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__link--darck"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="иконка linkedin"
+                >
+                  <svg class="socials__icon--darck" width="20" height="20">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer-socials">
-          <strong class="footer-socials__title">Присоединяйтесь</strong>
-          <ul class="socials">
-            <li class="socials__item">
-              <a
-                class="socials__link--darck"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка instagram"
-              >
-                <svg class="socials__icon--darck" width="20" height="20">
-                  <use href="./images/icons.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__link--darck"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка twitter"
-              >
-                <svg class="socials__icon--darck" width="20" height="20">
-                  <use href="./images/icons.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__link--darck"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка facebook"
-              >
-                <svg class="socials__icon--darck" width="20" height="20">
-                  <use href="./images/icons.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__link--darck"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка linkedin"
-              >
-                <svg class="socials__icon--darck" width="20" height="20">
-                  <use href="./images/icons.svg#linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="subscribe">
           <strong class="subscribe__title">Подпишитесь на рассылку</strong>
@@ -668,7 +670,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <script src="./js/modal.js"></script>
   </body>
 </html>
