--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     </header> -->
     <main class="main">
       <!-- Секция герой -->
-      <!-- <section class="hero">
+      <section class="hero">
         <h1 class="hero__title">Эффективные решения<br />для вашего бизнеса</h1>
-        <button class="button" type="button" data-modal-open>Заказать услугу</button> -->
+        <button class="button" type="button" data-modal-open>Заказать услугу</button>
         <!-- Модальное окно -->
-        <!-- <div class="backdrop is-hidden" data-modal>
+        <div class="backdrop is-hidden" data-modal>
           <div class="modal-wrapper">
             <button class="btn-close" data-modal-close aria-label="Закрыть">
               <svg class="btn-close__icon" width="11" height="11">
@@ -115,7 +115,7 @@
             </form>
           </div>
         </div>
-      </section> -->
+      </section>
       <!--Наши преимущества  -->
       <section class="section">
         <div class="conteiner">
