--- a/index.html
+++ b/index.html
@@ -22,12 +22,52 @@
   </head>
   <body>
     <!-- Header -->
-    <!-- <header class="header">
+    <header class="header">
       <div class="conteiner header__conteiner">
         <nav class="header__navigation">
           <a class="logo" href="./index.html" lang="en"
-            >Web<span class="logo logo--accent" lang="en">Studio</span></a
+            >Web<span class="logo-span logo-span--accent" lang="en">Studio</span></a
           >
+          <button class="mob-but-menu" type="button" aria-expanded="false" data-menu-button>
+            <svg class="mob-but-menu__icon" width="40" height="40" aria-label="Переключатель мобильного меню">
+              <use class="mob-but-menu__icon-burger" href="./images/icons.svg#burger-menu"></use>
+              <use class="mob-but-menu__icon-close" href="./images/icons.svg#close-mobile-menu"></use>
+            </svg>
+          </button>
+      <!-- Мобільне меню -->
+        <div class="mobile-menu" data-menu>
+          <ul class="mobile-nav">
+            <li class="mobile-nav__item"><a class="mobile-nav__link mobile-nav__link--active" href="./index.html">Студия</a></li>
+            <li class="mobile-nav__item"><a class="mobile-nav__link" href="./portfolio.html">Портфолио</a></li>
+            <li class="mobile-nav__item"><a class="mobile-nav__link" href="">Контакты</a></li>
+          </ul>
+
+          <ul class="mobile-cont">
+            <li class="mobile-cont__item">
+              <a class="mobile-cont__link mobile-cont__link--accent" href="tel:+380961111111">+380961111111</a>
+            </li>
+            <li class="mobile-cont__item">
+              <a class="mobile-cont__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+          </ul>
+
+          <ul class="mobile-socials">
+            <li class="mobile-socials__item">
+              <a class="mobile-socials__link" href="">Instagram</a>
+            </li>
+            <li class="mobile-socials__item">
+              <a class="mobile-socials__link" href="">Twitter</a>
+            </li>
+            <li class="mobile-socials__item">
+              <a class="mobile-socials__link" href="">Facebook</a>
+            </li>
+            <li class="mobile-socials__item">
+              <a class="mobile-socials__link" href="">LinkedIn</a>
+            </li>
+            
+          </ul>
+
+        </div>
 
           <ul class="header__list">
             <li class="header__item"><a class="header__link header__link--active" href="./index.html">Студия</a></li>
@@ -53,7 +93,7 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
     <main class="main">
       <!-- Секция герой -->
       <section class="hero">
