--- a/portfolio.html
+++ b/portfolio.html
@@ -70,15 +70,15 @@
         </div>
 
           <ul class="header__list">
-            <li class="header__item"><a class="header__link header__link--active" href="./index.html">Студия</a></li>
-            <li class="header__item"><a class="header__link" href="./portfolio.html">Портфолио</a></li>
+            <li class="header__item"><a class="header__link " href="./index.html">Студия</a></li>
+            <li class="header__item"><a class="header__link header__link--active" href="./portfolio.html">Портфолио</a></li>
             <li class="header__item"><a class="header__link" href="">Контакты</a></li>
           </ul>
         </nav>
         <ul class="contacts">
           <li class="contacts__item">
             <a class="contacts__link" href="mailto:info@devstudio.com">
-              <svg class="contacts__icon" width="16" height="12">
+              <svg class="contacts__icon contacts__icon--size-envelope" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -86,7 +86,7 @@
           </li>
           <li class="contacts__item">
             <a class="contacts__link" href="tel:+380961111111">
-              <svg class="contacts__icon" width="10" height="16">
+              <svg class="contacts__icon contacts__icon--size-smartphone" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use></svg
               >+380961111111</a
             >
