--- a/portfolio.html
+++ b/portfolio.html
@@ -155,7 +155,7 @@
                   />
                   <p class="card__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения <br />
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения 
                     о компании или частном лице.
                   </p>
                 </div>
@@ -188,7 +188,7 @@
                   />
                   <p class="card__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения <br />
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения 
                     о компании или частном лице.
                   </p>
                 </div>
@@ -220,7 +220,7 @@
                   />
                   <p class="card__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения <br />
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения 
                     о компании или частном лице.
                   </p>
                 </div>
@@ -252,7 +252,7 @@
                   />
                   <p class="card__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения <br />
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения 
                     о компании или частном лице.
                   </p>
                 </div>
@@ -284,7 +284,7 @@
                   />
                   <p class="card__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения <br />
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения 
                     о компании или частном лице.
                   </p>
                 </div>
@@ -316,7 +316,7 @@
                   />
                   <p class="card__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения <br />
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения 
                     о компании или частном лице.
                   </p>
                 </div>
@@ -348,7 +348,7 @@
                   />
                   <p class="card__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения <br />
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения 
                     о компании или частном лице.
                   </p>
                 </div>
@@ -380,7 +380,7 @@
                   />
                   <p class="card__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения <br />
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения 
                     о компании или частном лице.
                   </p>
                 </div>
@@ -412,7 +412,7 @@
                   />
                   <p class="card__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения <br />
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения 
                     о компании или частном лице.
                   </p>
                 </div>
